# django-run-site

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: configuration.md  env-file.md  from-git.md  hooks.md  local-processes.md  quickstart.md  troubleshooting.md  with-django-dev-helpers.md
docs/superpowers/plans/: 2026-06-29-fix-search-path-dump-filter.md
docs/superpowers/specs/: 2026-06-01-pg-restore-archive-dumps-design.md  2026-06-19-run-site-env-sh-export-design.md  2026-06-29-fix-search-path-dump-filter-design.md  2026-06-29-restore-progress-bar-design.md
examples/: runsite.bpp.toml  runsite.celery.toml  runsite.minimal.toml  runsite.sqlite.toml
examples/test_site/: README.md  manage.py  pyproject.toml  runsite.toml
examples/test_site/test_site/: runsite_hooks.py  settings.py  urls.py  wsgi.py
examples/test_site/test_site/pages/: apps.py  urls.py  views.py
src/django_run_site/: __init__.py  __main__.py  banner.py  cli.py  config.py  containers.py  discovery.py  dumps.py  env.py  errors.py  hooks.py  log_multiplexer.py  processes.py  superuser.py
src/django_run_site/source/: __init__.py  deps_installer.py  from_git.py  from_path.py  venv_setup.py
src/run_site/: __init__.py  __main__.py  banner.py  cli.py  config.py  containers.py  discovery.py  display_detect.py  dumps.py  env.py  env_file.py  errors.py  fileutil.py  hooks.py  host_discovery.py  init_cmd.py  log_multiplexer.py  processes.py  secrets_store.py  sidecar.py  sqlite.py  sticky_banner.py  superuser.py
src/run_site/source/: __init__.py  deps_installer.py  from_git.py  from_path.py  venv_setup.py
tests/: conftest.py  test_banner.py  test_browser_decision.py  test_cli_dry_run.py  test_config.py  test_containers.py  test_display_detect.py  test_dump_fix_search_path_integration.py  test_dump_loaders.py  test_env_builder.py  test_env_file.py  test_fileutil.py  test_from_git.py  test_hooks.py  test_host_discovery.py  test_init_cmd.py  test_log_multiplexer.py  test_processes.py  test_project_discovery.py  test_restore_progress_bar_integration.py  test_secrets_store.py  test_short_form.py  test_sidecar.py  test_sqlite.py  test_sticky_banner.py  test_venv_setup.py
