[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "django-run-site"
version = "0.16.0"
description = "CLI orchestrator for local Django development — testcontainers PostgreSQL/Redis, dump loading, log multiplexing, hooks, and run-from-git."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["django", "development", "testcontainers", "postgresql", "redis", "celery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "testcontainers[postgres,redis]>=4",
    "docker>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9",
]

[project.scripts]
run-site = "run_site.cli:main"

[project.urls]
Homepage = "https://github.com/iplweb/django-run-site"
Documentation = "https://github.com/iplweb/django-run-site/tree/main/docs"
Source = "https://github.com/iplweb/django-run-site"
Issues = "https://github.com/iplweb/django-run-site/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/run_site"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "docs/",
    "examples/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "docker: tests that require a running Docker daemon",
    "integration: end-to-end tests that spawn real subprocesses",
    "slow: tests slower than ~1s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:testcontainers.*",
    "ignore::DeprecationWarning:docker.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow assert False

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
# Strict mode is opt-in for v0.3 — the orchestrator's docker/testcontainers
# integration intentionally uses ``Any`` at the boundary. We re-evaluate
# tightening this for v1.0 after the public API has settled.

[[tool.mypy.overrides]]
module = ["testcontainers.*", "docker.*"]
ignore_missing_imports = true
